Rocks Rock v1 HTML

--- a/HTML/Rocks_Rock/rocksRock.html
+++ b/HTML/Rocks_Rock/rocksRock.html
@@ -20,32 +20,32 @@
                 <tr>
                     <td>
                         <a href="#home">
-                            <h3>&nbsp&nbspHome&nbsp;&nbsp; </h3>
+                            &nbsp;&nbsp;Home&nbsp;&nbsp;
                         </a>
                     </td>
                     <td>
                         <a href="#about">
-                            <h3>&nbsp;&nbsp;About&nbsp;&nbsp; </h3>
+                            &nbsp;&nbsp;About&nbsp;&nbsp;
                         </a>
                     </td>
                     <td>
                         <a href="#steps">
-                            <h3>&nbsp;&nbsp;Guide&nbsp;&nbsp; </h3>
+                            &nbsp;&nbsp;Guide&nbsp;&nbsp;
                         </a>
                     </td>
                     <td>
                         <a href="#tools">
-                            <h3>&nbsp;&nbsp;Essential Tools&nbsp;&nbsp; </h3>
+                            &nbsp;&nbsp;Essential Tools&nbsp;&nbsp;
                         </a>
                     </td>
                     <td>
                         <a href="#freque">
-                            <h3>&nbsp;&nbsp;Frequent Questions&nbsp;&nbsp; </h3>
+                            &nbsp;&nbsp;Frequent Questions&nbsp;&nbsp;
                         </a>
                     </td>
                     <td>
                         <a href="contact.html">
-                            <h3>&nbsp;&nbsp;Contact&nbsp;&nbsp;</h3>
+                            &nbsp;&nbsp;Contact&nbsp;&nbsp
                         </a>
                     </td>
                 </tr>
@@ -758,7 +758,7 @@
         <table>
             <tr>
                 <td>
-                    <h2 class="heading"><a href="aboutRocks.html">About US</a></h2>
+                    <h2 class="heading"><a href="aboutRocks.html">About US</a><sup>link</sup></h2>
                 </td>
             </tr>
             <tr>
@@ -800,7 +800,7 @@
 
     <!-- types of rocks and minerals -->
     <div id="types">
-        <h2 class="heading"><a href="typesRocks.html">Types of Rocks</a></h2>
+        <h2 class="heading"><a href="typesRocks.html">Types of Rocks</a><sup>link</sup></h2>
         <h3>Rocks and minerals are the building blocks of Earth’s crust, each with unique properties and origins.</h3>
         <ol>
             <li>
@@ -831,7 +831,7 @@
     
     <!-- Steps -->
     <div id="steps">
-        <h2 class="heading"><a href="stepsRocks.html">Guide to Rock Collecting</a></h2>
+        <h2 class="heading"><a href="stepsRocks.html">Guide to Rock Collecting</a><sup>link</sup></h2>
         <h3>
             <ol>
                 <li>Decide what interests you most like rocks, minerals, fossils, etc.</li>
@@ -848,7 +848,7 @@
 
     <!-- Tools -->
     <div id="tools">
-        <h2 class="heading"><a href="toolsRocks.html">Essential Tools</a></h2>
+        <h2 class="heading"><a href="toolsRocks.html">Essential Tools</a><sup>link</sup></h2>
         <h3>
             <ol>
                 <li>Rock Hammer, Chisel, Geology Pick, etc.</li>
@@ -862,7 +862,7 @@
 
     <!-- Frequent Questions -->
     <div id="freque">
-        <h2 class="heading"><a href="frequeRocks.html">Frequently Asked Questions</a></h2>
+        <h2 class="heading"><a href="frequeRocks.html">Frequently Asked Questions</a><sup>link</sup></h2>
         <h3>
             <ol>
                 <li>What is Rock Collection?</li>
