--- a/HTML/Resume_v1/index.html
+++ b/HTML/Resume_v1/index.html
@@ -26,7 +26,7 @@
                         </tr>
                     </table>
                 </div>
-                <p>Enthusiastic <strong> Software Developer</strong>.</p>
+                <p><strong> Software Developer </strong></p>
                 <p>Software developer with experience in Python, Java, and MERN Stack, and a focus on building efficient
                     applications. Background in full-stack development and database management. Brings a
                     collaborative approach to problem-solving and a commitment to writing clean, maintainable code.</p>
